--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </h1> 
  <div class="bot" type="button" onclick=" window.open('https://discord.com/api/oauth2/authorize?client_id=964033238043615252&permissions=8&scope=bot','_blank')">  🌸BOT🌸 </div>
 
- <title>Krzysiowo</title>
+ <title>KrzysiOwO</title>
 </head>
 
 <link rel="stylesheet" href="style.css">
