--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <br> <br> 🌸KrzysiOwO🌸
  </h1> 
  <div class="bot" type="button" onclick=" window.open('https://discord.com/api/oauth2/authorize?client_id=964033238043615252&permissions=8&scope=bot','_blank')">  🌸BOT🌸 </div>
-
+<embed src="/play.mp3" loop="true" autostart="true" width="2" height="0">
  <title>KrzysiOwO</title>
 </head>
 
